--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@antv/x6": "^2.16.1",
     "@douyinfe/semi-ui": "2.48.0",
     "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
