--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@antv/x6": "^2.16.1",
+    "@antv/x6-plugin-stencil": "^2.1.4",
+    "@antv/x6-react-shape": "^2.2.2",
     "@douyinfe/semi-ui": "2.48.0",
     "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
@@ -30,5 +32,10 @@
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
