--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@antv/x6-react-shape": "^2.2.2",
     "@douyinfe/semi-ui": "2.48.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "immer": "^10.0.3",
     "next": "14.0.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
